[gd_scene load_steps=14 format=3 uid="uid://ciljpcy8dvt4y"]

[ext_resource type="PackedScene" uid="uid://dm1o3dk5kk7xa" path="res://assets/enemies/shooter_enemy/shooter.aseprite" id="1_541tk"]
[ext_resource type="Script" path="res://scripts/components/health_component.gd" id="1_lni0v"]
[ext_resource type="Script" path="res://scripts/enemies/shooter.gd" id="1_ng17o"]
[ext_resource type="PackedScene" uid="uid://djfc2wf6fe1e5" path="res://scenes/enemies/shell.tscn" id="2_jfjkw"]
[ext_resource type="Script" path="res://scripts/state_machine/state_machine.gd" id="2_t54hr"]
[ext_resource type="Script" path="res://scripts/state_machine/enemy_states/shooter/idle.gd" id="4_ekomo"]
[ext_resource type="Script" path="res://scripts/state_machine/enemy_states/shooter/shooting.gd" id="5_qesi3"]
[ext_resource type="Script" path="res://scripts/state_machine/enemy_states/dead.gd" id="6_algir"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7urd5"]
size = Vector2(8, 10)

[sub_resource type="CircleShape2D" id="CircleShape2D_bk4vi"]
radius = 120.067

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u2f8r"]
size = Vector2(10, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ek7s3"]
size = Vector2(10, 10)

[sub_resource type="Curve" id="Curve_fe7g2"]
_data = [Vector2(0.0140263, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[node name="Shooter" type="CharacterBody2D" node_paths=PackedStringArray("health_component", "death_vfx")]
collision_layer = 8
script = ExtResource("1_ng17o")
shell = ExtResource("2_jfjkw")
death_animation_time = 1.0
health_component = NodePath("HealthComponent")
death_vfx = NodePath("PoofParticles")

[node name="AnimatedSprite2D" parent="." instance=ExtResource("1_541tk")]
speed_scale = 0.2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_7urd5")

[node name="AggroRange" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroRange"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_bk4vi")

[node name="Hitbox" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -5.5)
shape = SubResource("RectangleShape2D_u2f8r")

[node name="Hurtbox" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_ek7s3")

[node name="TrajectoryLine" type="Line2D" parent="."]
width = 2.0

[node name="ShootTimer" type="Timer" parent="."]

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("1_lni0v")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("2_t54hr")
state_type = "Enemy"
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("4_ekomo")

[node name="Shooting" type="Node" parent="StateMachine"]
script = ExtResource("5_qesi3")

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource("6_algir")

[node name="PoofParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 20
lifetime = 2.0
one_shot = true
explosiveness = 1.0
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 4.04
spread = 180.0
gravity = Vector2(2.08165e-12, 2.08165e-12)
initial_velocity_max = 5.0
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_fe7g2")

[connection signal="body_entered" from="AggroRange" to="StateMachine/Idle" method="_on_aggro_range_body_entered"]
[connection signal="body_exited" from="AggroRange" to="StateMachine/Shooting" method="_on_aggro_range_body_exited"]
[connection signal="body_entered" from="Hitbox" to="StateMachine/Idle" method="_on_hitbox_body_entered"]
[connection signal="body_entered" from="Hitbox" to="StateMachine/Shooting" method="_on_hitbox_body_entered"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="body_exited" from="Hurtbox" to="." method="_on_hurtbox_body_exited"]
[connection signal="timeout" from="ShootTimer" to="StateMachine/Shooting" method="_on_shoot_timer_timeout"]
